src/app/core/common-components/basic-autocomplete/basic-autocomplete.component.scss
@use "variables/colors";
@use "variables/sizes";

@use "../special-option-labels.scss";

:host {
  overflow: hidden;
}

em {
  color: colors.$primary;
}

.disable-autocomplete-active-color {
  color: black;
}

.autocomplete-footer {
  margin: sizes.$small sizes.$regular;
}

.mat-autocomplete-panel.custom-panel {
  overflow-y: hidden !important;
  max-height: none !important;
}

::ng-deep {
  .cdk-virtual-scroll-orientation-vertical .cdk-virtual-scroll-content-wrapper {
    width: 100%;
  }
}

.text-truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.chip {
  border-radius: 4px;
}

